--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "jsonld": "^8.3.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.439.0",
-    "next": "^16.0.8",
+    "next": "^16.0.7",
     "next-auth": "^4.24.7",
     "papaparse": "^5.5.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
@@ -92,6 +92,7 @@
     "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.3",
     "@jest/globals": "^30.1.2",
+    "@next/bundle-analyzer": "^16.0.10",
     "@types/busboy": "^1.5.4",
     "@types/cors": "^2.8.18",
     "@types/eslint": "^8.56.10",
@@ -101,14 +102,14 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.10",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.8",
+    "eslint-config-next": "^16.0.7",
     "jest": "^30.1.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
